[gd_scene load_steps=4 format=3 uid="uid://bka53vm5yms2p"]

[ext_resource type="Theme" uid="uid://ehrmkdn2lpq0" path="res://gametheme.tres" id="1_k20m2"]
[ext_resource type="Script" path="res://scripts/end _level_s_h.gd" id="2_ysnod"]
[ext_resource type="Texture2D" uid="uid://dumh217ul5ykr" path="res://assets/sprites/New Piskel.png" id="3_7kqiv"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k20m2")
script = ExtResource("2_ysnod")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 279.0
offset_top = 20.0
offset_right = 887.0
offset_bottom = 628.0
texture = ExtResource("3_7kqiv")
expand_mode = 3

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.38)

[node name="CenterContainer" type="CenterContainer" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level Complete"

[node name="next level" type="Button" parent="Control/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Pretty obvious. Isn't it?"
text = "Next Level"

[node name="exit" type="Button" parent="Control/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "if you click this then
 You will get to the
 same place you appeared
 when you just opened
 the game (probobly)."
text = "Exit To Main Menu"

[node name="restart" type="Button" parent="Control/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Why do you want 
to click this? You 
just finished the level."
text = "Restart"

[connection signal="pressed" from="Control/ColorRect/CenterContainer/VBoxContainer/next level" to="Control" method="_on_button_pressed"]
[connection signal="pressed" from="Control/ColorRect/CenterContainer/VBoxContainer/exit" to="Control" method="_on_exit_pressed"]
[connection signal="pressed" from="Control/ColorRect/CenterContainer/VBoxContainer/restart" to="Control" method="_on_restart_pressed"]
